...
                    <nil key="textColor"/>
                    <nil key="highlightedColor"/>
                </label>
                <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Type here" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Sj9-6f-fee">
                    <rect key="frame" x="0.0" y="20" width="393" height="44"/>
                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    <accessibility key="accessibilityConfiguration" identifier="InputLimitTextField"/>
                    <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                    <textInputTraits key="textInputTraits" autocorrectionType="no"/>
                    <userDefinedRuntimeAttributes>
                        <userDefinedRuntimeAttribute type="color" keyPath="layer.borderColor">
                            <color key="value" red="0.88444787260000002" green="0.8844479918" blue="0.8844479918" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
...
                        <outlet property="delegate" destination="-1" id="SNt-Jf-ghA"/>
                    </connections>
                </textField>
                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yjv-Kd-HaF">
                    <rect key="frame" x="338" y="57" width="30" height="15"/>
                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    <accessibility key="accessibilityConfiguration" identifier="InputLimitTextFieldCounter"/>
                    <constraints>
                        <constraint firstAttribute="width" constant="30" id="8oy-4Z-kou"/>
                        <constraint firstAttribute="height" constant="15" id="nsv-UQ-fUm"/>
                    </constraints>
                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
                    <color key="textColor" red="0.50441133979999997" green="0.50441139940000002" blue="0.50441139940000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
...
