...
                    <nil key="textColor"/>
                    <nil key="highlightedColor"/>
                </label>
                <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Type here" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KzG-3n-vBm">
                    <rect key="frame" x="0.0" y="20" width="393" height="44"/>
                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    <accessibility key="accessibilityConfiguration" identifier="NoDigitsTextField"/>
                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                    <textInputTraits key="textInputTraits" autocorrectionType="no"/>
                    <connections>
                        <action selector="noDigitsTextFieldAction:" destination="-1" eventType="editingChanged" id="3HE-WT-SbU"/>
                        <outlet property="delegate" destination="-1" id="WR9-ra-OQV"/>
                    </connections>
...
