...
                    <nil key="textColor"/>
                    <nil key="highlightedColor"/>
                </label>
                <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="wwwww-ddddd" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ky9-YV-5V7">
                    <rect key="frame" x="0.0" y="20" width="393" height="44"/>
                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    <accessibility key="accessibilityConfiguration" identifier="OnlyCharactersTextField"/>
                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                    <textInputTraits key="textInputTraits" autocorrectionType="no"/>
                    <connections>
                        <action selector="onlyCharactersTextFieldAction:" destination="-1" eventType="editingChanged" id="PDW-qt-Rhe"/>
                        <outlet property="delegate" destination="-1" id="S8Q-de-Kp5"/>
                    </connections>
...
